testsuite/tests/letrec-check/pr7231.ocaml.reference
Line 5, characters 58-64:
5 | let rec r = let rec x () = r and y () = x () in y () in r "oops";;
                                                              ^^^^^^
Warning 20 [ignored-extra-argument]: this argument will not be used by the function.

Line 5, characters 12-52:
5 | let rec r = let rec x () = r and y () = x () in y () in r "oops";;
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of let rec

